# arangodantic

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: autoupdate-pre-commit.yaml  publish.yaml  tests.yaml
arangodantic/: __init__.py  arangdb_error_codes.py  asynccontextmanager.py  configurations.py  cursor.py  directions.py  exceptions.py  graphs.py  indexes.py  models.py  operators.py  utils.py
arangodantic/backends/: asyncer_python_arango_backend.py
arangodantic/tests/: conftest.py  test_cursor.py  test_graph.py  test_model.py  test_operators.py
examples/: graph_example.py  readme_example.py
