[tool.poetry]
name = "arangodantic"
version = "0.3.0"
description = "Database models for ArangoDB using Pydantic base models."
authors = ["Digital Living International Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/arangodantic"
packages = [
    {include="arangodantic", from="."}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^1.9.1"
aioarangodb = "^0.1.2"
inflection = "^0.5.1"
shylock = {extras = ["aioarangodb"], version = "^1.1.1", optional = true}

[tool.poetry.extras]
shylock = ["shylock"]

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
invoke = "^1.7.1"
mypy = "^0.971"
flake8 = "^5.0.3"
pytest = "^7.1.2"
pydevd-pycharm = "^222.3345.131"
pytest-asyncio = "^0.19.0"
shylock = {extras = ["aioarangodb"], version = "^1.1.1"}

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
